# kasm

./: Cargo.toml  README.md  flake.nix  justfile  program.kasm  shell.nix
.github/workflows/: job.yml
doc/: instructions.md
src/: cli.rs  constant.rs  decode.rs  error.rs  execute.rs  flags.rs  instruction.rs  lib.rs  main.rs  operand.rs  preprocess.rs  program.rs  register.rs  registers.rs  stack.rs
src/decode/: add.rs  addition.rs  and.rs  compare.rs  div.rs  division.rs  jump.rs  mod.rs  mul.rs  multiplication.rs  not.rs  or.rs  pop.rs  print_register.rs  print_stack.rs  push.rs  remainder.rs  set.rs  sub.rs  subtraction.rs  test.rs  xor.rs
src/execute/: add.rs  addition.rs  and.rs  compare.rs  div.rs  division.rs  jump.rs  mod.rs  mul.rs  multiplication.rs  not.rs  or.rs  pop.rs  print_register.rs  print_stack.rs  push.rs  remainder.rs  set.rs  sub.rs  subtraction.rs  test.rs  xor.rs
src/instruction/: add.rs  addition.rs  and.rs  compare.rs  div.rs  division.rs  jump.rs  mod.rs  mul.rs  multiplication.rs  not.rs  or.rs  pop.rs  print_register.rs  print_stack.rs  push.rs  remainder.rs  set.rs  sub.rs  subtraction.rs  test.rs  xor.rs
src/processor/: constant.rs  error.rs  instruction.rs  mod.rs  operand.rs  register.rs
src/utils/: arithmetic.rs  bit_ops.rs  bitwise.rs  from_bytes.rs  mod.rs  overflow.rs  setable.rs  to_bytes.rs  to_le_bytes.rs  to_word.rs  writer.rs
