[package]
name = "kasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.63"
variant_count = "1.1.0"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
