[package]
name = "kasm"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "2.0.8"
variant_count = "1.1.0"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
indexing_slicing = "deny"
